--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <p class="text-xl text-gray-600 mb-4">Join brilliant speakers from around the globe for a week of free Java learning</p>
             <div class="inline-block bg-[#F77347] text-white px-6 py-2 rounded-full font-semibold mb-4">June 2-6, 2025</div>
             <a href="https://soujava.dev/30y-celebration-week" class="inline-block bg-[#F77347] text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors text-lg">
-                Register Now
+                Save your spot
             </a>
         </header>
 
