fix broken text on time

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00">12:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
@@ -477,7 +477,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00">13:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
