--- a/index.html
+++ b/index.html
@@ -322,11 +322,11 @@
             <div class="schedule-header">
                 <div class="flex items-center gap-4">
                     <h2 class="text-3xl font-bold text-[#16293F]">Schedule</h2>
-                    <a href="https://www.youtube.com/@SouJava/streams" target="_blank" class="stream-btn">
+                    <a href="https://soujava.dev/30y-celebration-week" target="_blank" class="stream-btn flex items-center gap-2">
                         <svg viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15l6-4.5-6-4.5v9z"/>
                         </svg>
-                        Watch Live Stream
+                        Save your spot
                     </a>
                 </div>
                 <div class="flex gap-2">
