--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <p class="text-xl text-gray-600 mb-4">Join brilliant speakers from around the globe for a week of free Java learning</p>
             <div class="inline-block bg-[#F77347] text-white px-6 py-2 rounded-full font-semibold mb-4">June 2-6, 2025</div>
             <a href="https://soujava.dev/30y-celebration-week" class="inline-block bg-[#F77347] text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors text-lg">
-                Save your spot
+                Register Now
             </a>
         </header>
 
@@ -322,11 +322,11 @@
             <div class="schedule-header">
                 <div class="flex items-center gap-4">
                     <h2 class="text-3xl font-bold text-[#16293F]">Schedule</h2>
-                    <a href="https://soujava.dev/30y-celebration-week" target="_blank" class="stream-btn flex items-center gap-2">
+                    <a href="https://www.youtube.com/@SouJava/streams" target="_blank" class="stream-btn">
                         <svg viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15l6-4.5-6-4.5v9z"/>
+                            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                         </svg>
-                        Save your spot
+                        Watch Live Stream
                     </a>
                 </div>
                 <div class="flex gap-2">
@@ -376,18 +376,6 @@
                                 <div class="speaker-profile" data-speaker="alex">
                                     <img src="speakers-pics/alex.jpg" alt="Alex Porcelli" class="speaker-avatar">
                                     <span class="speaker-name">Alex Porcelli</span>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:30">12:30</td>
-                            <td class="table-cell table-cell-session">
-                                Coming Soon <span class="session-language">(english)</span>
-                            </td>
-                            <td class="table-cell table-cell-speaker">
-                                <div class="speaker-profile" data-speaker="salaboy">
-                                    <img src="speakers-pics/salaboy.jpeg" alt="Maurício Salatino" class="speaker-avatar">
-                                    <span class="speaker-name">Maurício Salatino</span>
                                 </div>
                             </td>
                         </tr>
@@ -465,7 +453,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00">12:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
@@ -477,7 +465,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00">13:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
