--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <header class="text-center">
             <h1 class="text-4xl md:text-5xl font-bold text-[#16293F] mb-2">SouJava 30-Year Celebration Week</h1>
             <p class="text-xl text-gray-600 mb-4">Join brilliant speakers from around the globe for a week of free Java learning</p>
-            <div class="inline-block bg-[#F77347] text-white px-6 py-2 rounded-full font-semibold mb-4">June 2-6, 2025</div>
+            <div class="inline-block bg-[#F77347] text-[#16293F] px-6 py-2 rounded-full font-semibold mb-4">June 2-6, 2025</div>
             <a href="https://soujava.dev/30y-celebration-week" class="inline-block bg-[#F77347] text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors text-lg">
                 Register Now
             </a>
@@ -319,21 +319,14 @@
 
         <!-- Schedule Section -->
         <section class="mb-8">
-            <div class="schedule-header">
-                <div class="flex items-center gap-4">
-                    <h2 class="text-3xl font-bold text-[#16293F]">Schedule</h2>
-                    <a href="https://www.youtube.com/@SouJava/streams" target="_blank" class="stream-btn">
-                        <svg viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-                        </svg>
-                        Watch Live Stream
-                    </a>
-                </div>
-                <div class="flex gap-2">
-                    <button class="timezone-btn active" data-tz="America/Sao_Paulo">BRT (São Paulo)</button>
-                    <button class="timezone-btn" data-tz="America/New_York">EST (New York)</button>
-                    <button class="timezone-btn" data-tz="Europe/Berlin">CET (Berlin)</button>
-                </div>
+            <div class="schedule-header flex justify-between items-center mb-6">
+                <h2 class="text-3xl font-bold text-[#16293F]">Schedule</h2>
+                <a href="https://soujava.dev/30y-celebration-week" target="_blank" class="stream-btn flex items-center gap-2">
+                    <svg viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15l6-4.5-6-4.5v9z"/>
+                    </svg>
+                    Save your spot
+                </a>
             </div>
             <div class="overflow-x-auto">
                 <table class="w-full border-collapse">
@@ -453,7 +446,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00">12:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="12:00">12:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
@@ -465,7 +458,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00">13:00</td>
+                            <td class="table-cell table-cell-time font-medium text-[#F77347]" data-time="13:00">13:00</td>
                             <td class="table-cell table-cell-session">
                                 Coming Soon <span class="session-language">(english)</span>
                             </td>
