updating thumb and event start time

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta property="og:title" content="SouJava 30-Year Celebration Week">
     <meta property="og:description" content="Free online Java conference with Java Champions from around the globe">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="duke-30y.png">
     <meta name="robots" content="index, follow">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="duke-30y.png">
     <title>SouJava 30-Year Celebration Week</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.10/dayjs.min.js"></script>
