fix: correct template literal syntax in talk description
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     tdSession.innerHTML =
                         `${talk.title} <span class="session-language">(${talk.language})</span>` +
                         (isExpandable ? ` <span class="arrow-icon">⤵</span>
-                        <div id="${talk.id}" class="talk-description">$${formatDescription(talk.description)}</div>` : '');
+                        <div id="${talk.id}" class="talk-description">${formatDescription(talk.description)}</div>` : '');
                     // Speakers
                     const tdSpeaker = document.createElement('td');
                     tdSpeaker.className = 'table-cell table-cell-speaker';
