--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Java Champions for SouJava's 30-Year Celebration Week - Free online conference June 16-20, 2025">
     <title>Java 30Y #CelebrationWeek</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     
     <!-- Performance Optimizations -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -143,7 +145,7 @@
                                 <div class="timezone-buttons">
                                     <button class="timezone-btn active" data-tz="America/Sao_Paulo">BRT</button>
                                     <button class="timezone-btn" data-tz="Europe/London">CET</button>
-                                    <button class="timezone-btn" data-tz="America/New_York">EST</button>
+                                    <button class="timezone-btn" data-tz="America/New_York">EDT</button>
                                 </div>
                             </div>
                             
@@ -254,17 +256,6 @@
                     <div class="speaker-bio" id="modalSpeakerBio"></div>
                     <div class="social-links" id="modalSocialLinks"></div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal" id="sessionModal" role="dialog" aria-labelledby="sessionTitle" aria-modal="true">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button class="modal-close" aria-label="Close session details">×</button>
-            </div>
-            <div class="modal-body">
-                <div id="sessionDetails"></div>
             </div>
         </div>
     </div>
