improving topics visualization and log cleanup

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
                                 <select id="speaker-filter" class="filter-select">
                                     <option value="">All Speakers</option>
                                 </select>
+                                <select id="topic-filter" class="filter-select">
+                                    <option value="">All Topics</option>
+                                </select>
                                 <button class="clear-filters" id="clear-filters">Clear All</button>
                             </div>
                         </div>
