--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Join Java Champions for SouJava's 30-Year Celebration Week - Free online conference June 16-20, 2025">
     <title>Java 30Y #CelebrationWeek</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K4QDNZB9C7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K4QDNZB9C7');
+    </script>
 
     
     <!-- Performance Optimizations -->
