fixing link to soujava

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="sponsors-section">
                     <p class="sponsor-label">Brought to you by</p>
                     <div class="sponsor-logos">
-                        <a href="https://soujava.org" target="_blank" rel="noopener">
+                        <a href="https://soujava.org.br" target="_blank" rel="noopener">
                             <img src="./logos/soujava.png" alt="SouJava" class="sponsor-logo">
                         </a>
                     </div>
