day 5 and timezones

--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
                             <div class="timezone-section">
                                 <span class="filter-label">See schedule in</span>
                                 <div class="timezone-buttons">
-                                    <button class="timezone-btn active" data-tz="America/Sao_Paulo">BRT</button>
-                                    <button class="timezone-btn" data-tz="Europe/London">CET</button>
-                                    <button class="timezone-btn" data-tz="America/New_York">EDT</button>
+                                    <button class="timezone-btn active" data-tz="America/Sao_Paulo">BRT (Brazil)</button>
+                                    <button class="timezone-btn" data-tz="Europe/Berlin">CEST (Europe)</button>
+                                    <button class="timezone-btn" data-tz="America/New_York">EDT (US East)</button>
+                                    <button class="timezone-btn" data-tz="America/Chicago">CDT (US Central)</button>
                                 </div>
                             </div>
                             
